--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,10 @@ jobs:
         echo "${{ secrets.BASTION_PRIVATE_KEY }}" > ~/.ssh/bastion.pem
         chmod 600 ~/.ssh/bastion.pem
 
+        # Add bastion host to known_hosts
+        ssh-keyscan -H ${{ secrets.BASTION_HOST }} >> ~/.ssh/known_hosts
+        chmod 600 ~/.ssh/known_hosts
+
         # Test bastion key file
         echo "Testing bastion key file:"
         ls -l ~/.ssh/bastion.pem
@@ -44,22 +48,15 @@ jobs:
         echo "Testing bastion host connectivity:"
         nc -zv ${{ secrets.BASTION_HOST }} 22 || echo "Bastion host not reachable"
 
-        echo "Host yjs" >> ~/.ssh/config
-        echo "  HostName ${{ secrets.YJS_PRIVATE_IP }}" >> ~/.ssh/config
-        echo "  User ${{ secrets.YJS_USER }}" >> ~/.ssh/config
-        echo "  IdentityFile ~/.ssh/bastion.pem" >> ~/.ssh/config
-        echo "  ProxyCommand ssh -i ~/.ssh/bastion.pem -o StrictHostKeyChecking=no -W %h:%p ${{ secrets.BASTION_USER }}@${{ secrets.BASTION_HOST }}" >> ~/.ssh/config
-        echo "  StrictHostKeyChecking no" >> ~/.ssh/config
-        echo "  ServerAliveInterval 60" >> ~/.ssh/config
-        echo "  ServerAliveCountMax 3" >> ~/.ssh/config
+        # Configure SSH for both bastion and Yjs
+        printf "Host bastion\n  HostName %s\n  User %s\n  IdentityFile ~/.ssh/bastion.pem\n  StrictHostKeyChecking no\n  UserKnownHostsFile ~/.ssh/known_hosts\n\nHost yjs\n  HostName %s\n  User %s\n  IdentityFile ~/.ssh/bastion.pem\n  ProxyCommand ssh -W %%h:%%p bastion\n  StrictHostKeyChecking no\n  UserKnownHostsFile ~/.ssh/known_hosts\n" "${{ secrets.BASTION_HOST }}" "${{ secrets.BASTION_USER }}" "${{ secrets.YJS_PRIVATE_IP }}" "${{ secrets.YJS_USER }}" > ~/.ssh/config
+        chmod 600 ~/.ssh/config
 
     - name: Test Bastion SSH connection
-      run: |
-        ssh -v -i ~/.ssh/bastion.pem ${{ secrets.BASTION_USER }}@${{ secrets.BASTION_HOST }} 'echo "Bastion connection successful"'
+      run: ssh -v bastion 'echo "Bastion connection successful"'
 
     - name: Test Yjs SSH connection
-      run: |
-        ssh -v yjs 'echo "SSH connection successful"'
+      run: ssh -v yjs 'echo "SSH connection successful"'
 
     - name: Deploy to Yjs via Bastion
       run: |
